Fix spacing of email field; removed unecessary code in css files; comment work

--- a/css/contactStyles.css
+++ b/css/contactStyles.css
@@ -29,7 +29,7 @@ h3:hover {
     font-size: 20px;
 }
 
-/* all buttons follow this styling except for the color and positional changes */
+/* All buttons follow this styling except for the color and positional changes */
 button {
     border-radius: 10px;
     width: 10%;
@@ -77,7 +77,7 @@ button:hover {
     background-color: #f9fd1a;
 }
 
-/* button styling for return to list of contacts button*/
+/* Button styling for return to list of contacts button*/
 .return {
     right: 11%;
     background-color: #f3c623;
@@ -85,7 +85,7 @@ button:hover {
     margin-right: 1%;
 }
 
-/* flash brighter yellow for return to contact list buttons. */
+/* Flash brighter yellow for return to contact list buttons. */
 .return:hover {
     background-color: #f9fd1a; 
 }
@@ -102,6 +102,7 @@ button:hover {
     background-color: #1eff16;
 }
 
+/* Nav bar search field styling */
 .searchBar {
     border-radius: 60px;
     font-family: 'Play', sans-serif;
@@ -124,8 +125,7 @@ button:hover {
     margin-top: 8px;
 }
 
-/* Top bar with search field and sign out, and create contact button.
-   Present also in createContact.html. */
+/* Top bar with search field and sign out, and create contact button. */
 .navBar {
     position: fixed;
     height: 55px;
@@ -134,29 +134,6 @@ button:hover {
     opacity: .5;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
-}
-
-/* Background image for body of createContact.html */
-.bodyBackground {
-    background-image: url('SolarFull_SeanDoran_2880FullwidthLede.jpg');
-}
-
-/* This is the styling for the purple decorative rectangle used in the different pages */
-.Rectangle {
-    text-align: center;
-    position: absolute;
-    width: 55%;
-    height: 450px;
-    margin: auto;
-    top: 215px;
-    background-color: #00005c;
-    opacity: .6;
-    padding: 50px;
-    border-radius: 40px;
-    padding-right: 0px;
-    left: 10px;
-    padding-left: 0px;
-    right: 0px;
 }
 
 /* This is the dark blue rectangle in which the contact list appears on */
@@ -177,43 +154,13 @@ button:hover {
     padding-bottom: 0px;
 }
 
-/* Email field positioning in createContact.html */
-/* .email {
-    margin-right: 10px;
-    margin-left: 54px; 
-}  */
-
-/* Phone field positioning in createContact.html */
-/* .phone {
-    margin-left: 5px;
-} */
-
 h1 {
     color: whitesmoke;
     font-family: 'Bangers', cursive;
     font-size: 47px;
     text-align: center;
 }
-
-.addContact:hover {
-    background-color: #1eff16;
-}
-
-/* Add contact button styling(createContact.html) */
-.addContact {
-    border-radius: 10px;
-    width: 20%;
-    height: 50px;
-    margin-top: 10px;
-    font-family: 'Play', sans-serif;
-    font-size: x-large;
-    background-color: #79d70f;
-    border-style: solid;
-    border-width: 3px;
-    border-color: black;    
-    right: 39.5%;
-}
-
+ /* Search bar hover effect */
 .bar:hover {
     border-width: 10px;
 }
@@ -317,8 +264,6 @@ td {
 /* Styling for all the edit buttons */
 .Edit {
     position: static;
-   /* width: 100%;
-    height: 30px;*/
     width: 15%;
     font-size: medium;
     background-color: #f3c623;
@@ -332,8 +277,6 @@ td {
     column-span: all;
     position: static;
     width: 30%;
-    /* width: initial; */
-    /*width: 100%;*/
 }
 
 .searchMessage {
