--- a/css/createContactStyles.css
+++ b/css/createContactStyles.css
@@ -7,14 +7,9 @@ body {
     margin: 0;
 }
 
-li {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
 h3 {
     color: whitesmoke;
-    font-family: 'Play', sans-serif;
+        font-family: 'Play', sans-serif;
     position: fixed;
     display:inline-block;
     left: 1.5%;
@@ -28,8 +23,12 @@ h3:hover {
 .hover:hover {
     font-size: 20px;
 }
+/* Greeting hover effect; makes text bigger to create a pop out effect */
+.great:hover {
+    font-size: 20px;
+}
 
-/* all buttons follow this styling except for the color and positional changes */
+/* All buttons follow this styling except for the color and positional changes */
 button {
     border-radius: 10px;
     width: 10%;
@@ -46,35 +45,9 @@ button {
     cursor: pointer;
 }
 
-/* On mouse hover Sign out button flashes this brighter red */
+/* On mouse hover Sign out button flashes this bright red */
 button:hover {
     background-color: #f32323;  
-}
-
-/* Create Contact button formating */
-.createContact {
-    right: 11%;
-    background-color: #f3c623;
-    font-size: medium;
-    margin-right: 1%;
-}
-
-/* Scroll box styling. This does not style the scroll bar */
-.scrollBox {
-    width: 53%;
-    height: 910px;
-    line-height: 3em;
-    overflow: auto;
-    padding: 5px;
-    background-color: transparent;
-    position: absolute;
-    left: 23.5%;
-    top: 57px;
-}
-
-/* Flash brighter yellow when mouse hovers on create contact button */
-.createContact:hover {
-    background-color: #f9fd1a;
 }
 
 /* button styling for return to list of contacts button*/
@@ -90,42 +63,7 @@ button:hover {
     background-color: #f9fd1a; 
 }
 
-/* Search button styling */
-.searchButton {
-    right: 37.1%;
-    background-color: #79d70f;
-    width: 7%;
-}
-
-/* Search button styling on hover */
-.searchButton:hover {
-    background-color: #1eff16;
-}
-
-.searchBar {
-    border-radius: 60px;
-    font-family: 'Play', sans-serif;
-    border-style: solid;
-    border-width: 3px;
-    border-color: black;
-    text-align: center;
-    position: fixed;
-    margin-left: 25%;
-    width: 30%;
-    height: 22px;
-    margin-top: 15px;
-    font-size: larger;
-}
-
-/* Borders become bigger when hovering on search bar */
-.searchBar:hover {
-    border-width: 10px;
-    margin-left: 24%;
-    margin-top: 8px;
-}
-
-/* Top bar with search field and sign out, and create contact button.
-   Present also in createContact.html. */
+/* Top bar with sign out, and Return to contacts button. */
 .navBar {
     position: fixed;
     height: 55px;
@@ -159,28 +97,10 @@ button:hover {
     right: 0px;
 }
 
-/* This is the dark blue rectangle in which the contact list appears on */
-.Rectangle2 {
-    top: 55px;
-    text-align: center;
-    position: absolute;
-    opacity: .3;
-    width: 50%;
-    height: 924px;
-    margin: auto;
-    background-color: #00005c;
-    padding: 50px;
-    left: 10px;
-    padding-left: 0px;
-    right: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
 /* Email field positioning in createContact.html */
 .email {
-    /* margin-right: 10px;
-    margin-left: 54px; */
+    margin-right: 10px;
+    margin-left: 54px;
 }
 
 /* Phone field positioning in createContact.html */
@@ -195,11 +115,7 @@ h1 {
     text-align: center;
 }
 
-.addContact:hover {
-    background-color: #1eff16;
-}
-
-/* Add contact button styling(createContact.html) */
+/* Add contact button styling */
 .addContact {
     border-radius: 10px;
     width: 20%;
@@ -214,6 +130,11 @@ h1 {
     right: 39.5%;
 }
 
+.addContact:hover {
+    background-color: #1eff16;
+}
+
+/* Text fields hover effect. Makes border bigger to give impression of pop out effect */
 .bar:hover {
     border-width: 10px;
 }
@@ -243,94 +164,4 @@ p {
     font-size: x-large;
     color: whitesmoke;
     margin-right: 10px;
-}
-
-/* Width of scroll bar */
-::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track color*/
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    opacity: .1;
-  }
-   
-  /* Handle color*/
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 50%;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
-
-  td {
-      font-family: 'Play', sans-serif;
-      color: whitesmoke;
-  }
-
-  /* Handles styling for button that expands to contact info */
-  .collaps {
-    background-color: #07031a;
-    position: static;
-    color: whitesmoke;
-    font-family: 'Play', sans-serif;
-    font-weight: bolder;
-    cursor: pointer;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    margin-top: 0;
-  }
-  
-  /* Styling for collaps when hovering and when it has been clicked */
-  .active, .collaps:hover {
-    margin-top: 0px;
-    width: 100%;
-    height: 50px;
-    background-color: black;
-    font-size: large;
-  }
-  
-  /* Styling for the container that holds a contacts info.
-     This styling is seen once the contact is clicked. */
-  .content {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-  }
-
-td {
-    color: white;
-}
-
-/* Styling for all the edit buttons */
-.Edit {
-    position: static;
-   /* width: 100%;
-    height: 30px;*/
-    font-size: medium;
-    background-color: #f3c623;
-}
-.Edit:hover {
-    background-color: #f9fd1a; 
-}
-
-/* Styling for Delete contact button */
-.deleteContact {
-    column-span: all;
-    position: static;
-    width: initial;
-    /*width: 100%;*/
-}
-
-.searchMessage {
-    color: red;
-    font-size: xx-large;
-    text-align: center;
 }
